fix: Use percentages for column-gap

--- a/src/scss/experimental_csscolumns.scss
+++ b/src/scss/experimental_csscolumns.scss
@@ -6,7 +6,7 @@
 	[class]._csscolumns {
 		column-count: 2;
 		column-width: 50%;
-		column-gap: prem($grid-gutter);
+		column-gap: cols_pct(0, 1);
 	}
 
 	[class]._csscolumns li {
